Source/WTF/wtf/Language.cpp
@@ -62,6 +62,7 @@ void removeLanguageChangeObserver(void* context)
 
 void languageDidChange()
 {
+    platformLanguageDidChange();
     for (auto& observer : copyToVector(observerMap())) {
         if (observerMap().contains(observer.key))
             observer.value(observer.key);
@@ -182,5 +183,11 @@ String displayNameForLanguageLocale(const String& localeName)
 #endif
     return localeName;
 }
+
+#if !PLATFORM(COCOA)
+void platformLanguageDidChange()
+{
+}
+#endif
 
 }
